--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
+	
 <title>文档标题</title>
+	<link rel="shortcut icon" type="image/svg+xml" href="https://icons.getbootstrap.com/assets/icons/file-earmark-pdf-fill.svg">
+	<link rel="apple-touch-icon" sizes="64x64" href="https://icons.getbootstrap.com/assets/icons/file-earmark-pdf-fill.svg">
 </head>
 <body>
 	<h1>卡巴斯基对拼多多恶意代码的报告</h1>
 	<a href="./report_n.pdf">en</a>
 	<a href="./report_cn.pdf">cn</a>
+	<p>from<a href="https://github.com/davincifans101/pinduoduo_backdoor_detailed_report/blob/main/"><img aalt="github icon" src="https://icons.getbootstrap.com/assets/icons/github.svg">Github</a></p>
 </body>
 </html>
