fix error in displaying icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<h1>卡巴斯基对拼多多恶意代码的报告</h1>
 	<a href="./report_n.pdf">en</a>
 	<a href="./report_cn.pdf">cn</a>
-	<p>from<a href="https://github.com/davincifans101/pinduoduo_backdoor_detailed_report/blob/main/"><img aalt="github icon" src="https://icons.getbootstrap.com/assets/icons/github.svg">Github</a></p>
+	<p>from<a href="https://github.com/davincifans101/pinduoduo_backdoor_detailed_report/blob/main/"><img width="40" alt="github icon" src="https://icons.getbootstrap.com/assets/icons/github.svg"></a></p>
 </body>
 </html>
